one_hot_encoding.txt
Python 3.6.2 (v3.6.2:5fd33b5, Jul  8 2017, 04:14:34) [MSC v.1900 32 bit (Intel)] on win32
Type "help", "copyright", "credits" or "license" for more information.
>>> from  sklearn.feature_extraction import DictVectorizer
>>>
>>> x_dict=[{'DISEASE:''CATARACT','STAGE:''INTER'},
... x_dict=[{'DISEASE:''CATARACT','STAGE:''INTER'},
  File "<stdin>", line 2
    x_dict=[{'DISEASE:''CATARACT','STAGE:''INTER'},
          ^
SyntaxError: invalid syntax
>>> x_dict=[{'DISEASE':'CATARACT','STAGE':'INTER'},
... x_dict=[{'DISEASE':'METROPIA','STAGE':'BEG'},
  File "<stdin>", line 2
    x_dict=[{'DISEASE':'METROPIA','STAGE':'BEG'},
          ^
SyntaxError: invalid syntax
>>> x_dict=[{'DISEASE':'METROPIA','STAGE':'BEG'},
... {'DISEASE':'HYPERMETROPIA','STAGE':'INTER'},
... {'DISEASE':'MYOPIA','STAGE':'LAST'}]
>>> dict_one_hot_encoder=DictVectorizer(sparse=False)
>>> x_encoded=dict_one_hot_encoder.fit_transform(x_dict)
>>> print(x_encoded)
[[0. 1. 0. 1. 0. 0.]
 [1. 0. 0. 0. 1. 0.]
 [0. 0. 1. 0. 0. 1.]]
>>>